// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select children when children are not provided it renders the component without children 1`] = `
<div
  className=""
>
  <label>
    Test
  </label>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "caretColor": "transparent",
      }
    }
    type="text"
    value="Foo"
  />
</div>
`;

exports[`Select children when children are provided it renders the component with children 1`] = `
<div
  className=""
>
  <label>
    Test
  </label>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "caretColor": "transparent",
      }
    }
    type="text"
    value=""
  />
  TEST
</div>
`;

exports[`Select label when no label is provided renders without a label 1`] = `
<div
  className=""
>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "caretColor": "transparent",
      }
    }
    type="text"
    value="Foo"
  />
</div>
`;

exports[`Select label when the provided label is ReactElement renders with the provided label 1`] = `
<div
  className=""
>
  <label>
    Test
  </label>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "caretColor": "transparent",
      }
    }
    type="text"
    value="Foo"
  />
</div>
`;

exports[`Select label when the provided label is string renders with the provided label 1`] = `
<div
  className=""
>
  <label>
    Test
  </label>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "caretColor": "transparent",
      }
    }
    type="text"
    value="Foo"
  />
</div>
`;

exports[`Select options when the select's text input is focused shows options 1`] = `
<div
  className=""
>
  <label>
    Test
  </label>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "caretColor": "transparent",
      }
    }
    type="text"
    value="Foo"
  />
  <ul>
    <li
      className="current"
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      Foo
    </li>
    <li
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      Bar
    </li>
    <li
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      Baz
    </li>
  </ul>
</div>
`;

exports[`Select options when the select's text input is not focused does not show options 1`] = `
<div
  className=""
>
  <label>
    Test
  </label>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "caretColor": "transparent",
      }
    }
    type="text"
    value="Foo"
  />
</div>
`;

exports[`Select value when an option is not selected it sets the text input value to an empty string 1`] = `
<div
  className=""
>
  <label>
    Test
  </label>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "caretColor": "transparent",
      }
    }
    type="text"
    value=""
  />
</div>
`;

exports[`Select value when an option is selected it sets the text input value to option text 1`] = `
<div
  className=""
>
  <label>
    Test
  </label>
  <input
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "caretColor": "transparent",
      }
    }
    type="text"
    value="Foo"
  />
</div>
`;
